--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,9 @@ test:
 #
 production:
   <<: *default
-  database: microposts_1_production
-  username: microposts_1
-  password: <%= ENV['MICROPOSTS_1_DATABASE_PASSWORD'] %>
+ adapter: postgresql
+  encoding: unicode
+  pool: 5
+  database: message-board_production
+  username: message-board
+  password: <%= ENV['MESSAGE-BOARD_DATABASE_PASSWORD'] %>
